--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div id="container_2">
 <!------------------------------------------------------------->
-		<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } ' style="">	
+		<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } '>	
 <!------------------------------------------------------------->
 			<div class="carousel-cell">
 		  		<div id="slider">
@@ -44,11 +44,40 @@
 								<img src="images/photoes/arrow.png">
 							</div>
 						</a>
+<!--
 						<div id="slider_menu">
 								<a class="button2"></a>
 								<a class="button2"></a>
 								<a class="button_active"></a>
 						</div>
+-->
+					</div>
+				</div>
+		  	</div>
+<!------------------------------------------------------------->
+			<div class="carousel-cell">
+		  		<div id="slider">
+					<img src="images/photoes/banner_slider_02.jpg">
+					<div id="slider1">
+						<div id="slider2">
+							<h2>Vidisse exquisitaque</h2>
+							<p style="margin: 0">ut anim malis quo pariatur ut anim malis quo pariatur</p>
+						</div>
+						<a class="button1">
+							<div style="float: left;margin:5px;">
+								Learn more
+							</div>
+							<div style="float: right;margin:5px;">
+								<img src="images/photoes/arrow.png">
+							</div>
+						</a>
+<!--
+						<div id="slider_menu">
+								<a class="button2"></a>
+								<a class="button2"></a>
+								<a class="button_active"></a>
+						</div>
+-->
 					</div>
 				</div>
 		  	</div>
@@ -69,107 +98,85 @@
 								<img src="images/photoes/arrow.png">
 							</div>
 						</a>
+<!--
 						<div id="slider_menu">
 								<a class="button2"></a>
 								<a class="button2"></a>
 								<a class="button_active"></a>
 						</div>
+-->
 					</div>
 				</div>
-		  	</div>
-<!------------------------------------------------------------->			
-			<div class="carousel-cell">
-		  		<div id="slider">
-					<img src="images/photoes/banner_slider_01.png">
-					<div id="slider1">
-						<div id="slider2">
-							<h2>Vidisse exquisitaque</h2>
-							<p style="margin: 0">ut anim malis quo pariatur ut anim malis quo pariatur</p>
-						</div>
-						<a class="button1">
-							<div style="float: left;margin:5px;">
-								Learn more
-							</div>
-							<div style="float: right;margin:5px;">
-								<img src="images/photoes/arrow.png">
-							</div>
-						</a>
-						<div id="slider_menu">
-								<a class="button2"></a>
-								<a class="button2"></a>
-								<a class="button_active"></a>
-						</div>
-					</div>
-				</div>
-		  	</div>			
+		  	</div>	
 <!------------------------------------------------------------->
-			<div id="intro">
-				<div id="intro1">
-					<h2>the connected lifestyle</h2>
-				</div>
-				<div class="grid1">
-					<div id="grid1-1">
-						<p>Vidisse exquisitaque te deserunt, ubi sunt do irure, ut anim malis quo pariatur 
-							de do sint incididunt si incurreret do quibusdam, quid laborum consequat, qui 
-							malis qui summis sed aute appellat iis cupidatat. Senserit adipisicing est 
-							senserit, nescius relinqueret hic incididunt an labore nostrud si quorum ipsum, 
-							aut nam malis quae irure. Possumus est nulla, ipsum an se fugiat aliquip e eram 
-							fabulas</p>
-						<a class="button1">
-							<div style="float: left;margin:5px;">
-								Learn more
-							</div>
-							<div style="float: right;margin:5px;">
-								<img src="images/photoes/arrow.png">
-							</div>
-						</a>
-					</div>
-					<div class="grid2">
-						<h1>lorem ipsum</h1>
-						<div class="images" style="border-right: 1px solid rgb(224,224,224);">
-							<img src="images/photoes/lifestyle_thmb_img01.png">
-							<h2>connect</h2>
-							<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
-						</div>
-						<div class="images">
-							<img src="images/photoes/lifestyle_thmb_img02.png">
-							<h2>experience</h2>
-							<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
-						</div>
-					</div>
-					<div class="grid2">
-						<h1>lorem ipsum </h1>
-						<div class="images" style="border-right: 1px solid rgb(224,224,224);">
-							<img src="images/photoes/lifestyle_thmb_img03.png">
-							<h2>discover</h2>
-							<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
-						</div>
-						<div class="images">
-							<img src="images/photoes/lifestyle_thmb_img04.png">
-							<h2>grow</h2>
-							<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
-						</div>
-					</div>
-				</div>
-				
+		</div>		
+<!------------------------------------------------------------->
+		<div id="intro">
+			<div id="intro1">
+				<h2>the connected lifestyle</h2>
 			</div>
-			<div id="details">
-				<div class="grid3" style="padding-right: 10%">
-					<div>
-						<h2>our customers</h2>
-						<p>Et summis sint e senserit ad quis ubi incididunt ad minim possumus efflorescere, 
-						de offendit sempiternum de arbitror multos ipsum probant summis, hic magna</p>
-						<div class="grid4">
-							<div><img src="images/photoes/custmr_logo01.png"></div>
-							<div><img src="images/photoes/custmr_logo02.png"></div>
-							<div><img src="images/photoes/custmr_logo03.png"></div>
-							<div><img src="images/photoes/custmr_logo04.png"></div>
-							<div><img src="images/photoes/custmr_logo05.png"></div>
-							<div><img src="images/photoes/custmr_logo06.png"></div>
+			<div class="grid1">
+				<div id="grid1-1">
+					<p>Vidisse exquisitaque te deserunt, ubi sunt do irure, ut anim malis quo pariatur 
+					de do sint incididunt si incurreret do quibusdam, quid laborum consequat, qui 
+					malis qui summis sed aute appellat iis cupidatat. Senserit adipisicing est 
+					senserit, nescius relinqueret hic incididunt an labore nostrud si quorum ipsum, 
+					aut nam malis quae irure. Possumus est nulla, ipsum an se fugiat aliquip e eram 
+					fabulas</p>
+					<a class="button1">
+						<div style="float: left;margin:5px;">
+							Learn more
 						</div>
+						<div style="float: right;margin:5px;">
+							<img src="images/photoes/arrow.png">
+						</div>
+					</a>
+				</div>
+				<div class="grid2">
+					<h1>lorem ipsum</h1>
+					<div class="images" style="border-right: 1px solid rgb(224,224,224);">
+						<img src="images/photoes/lifestyle_thmb_img01.png">
+						<h2>connect</h2>
+						<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
+					</div>
+					<div class="images">
+						<img src="images/photoes/lifestyle_thmb_img02.png">
+						<h2>experience</h2>
+						<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
 					</div>
 				</div>
-				<div >
+				<div class="grid2">
+					<h1>lorem ipsum </h1>
+					<div class="images" style="border-right: 1px solid rgb(224,224,224);">
+						<img src="images/photoes/lifestyle_thmb_img03.png">
+						<h2>discover</h2>
+						<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
+					</div>
+					<div class="images">
+						<img src="images/photoes/lifestyle_thmb_img04.png">
+						<h2>grow</h2>
+						<p>Et nisi doctrina instituendarum te te fore arbitrantur, sint pariatur sempiternum</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="details">
+			<div class="grid3" style="padding-right: 10%">
+				<div>
+					<h2>our customers</h2>
+					<p>Et summis sint e senserit ad quis ubi incididunt ad minim possumus efflorescere, 
+					de offendit sempiternum de arbitror multos ipsum probant summis, hic magna</p>
+					<div class="grid4">
+						<div><img src="images/photoes/custmr_logo01.png"></div>
+						<div><img src="images/photoes/custmr_logo02.png"></div>
+						<div><img src="images/photoes/custmr_logo03.png"></div>
+						<div><img src="images/photoes/custmr_logo04.png"></div>
+						<div><img src="images/photoes/custmr_logo05.png"></div>
+						<div><img src="images/photoes/custmr_logo06.png"></div>
+					</div>
+				</div>
+			</div>
+			<div >
 				<div class="grid5">
 					<h2>in the news</h2>
 					<div class="grid6">
@@ -207,7 +214,7 @@
 					<a><img src="images/photoes/video-thumbnail.png"></a>
 				</div>
 				<div>
-					<p>Et summis sint e senserit ad quis ubi incididunt ad minim possumus efflorescere,de offendit sempiternum de arbitror multos ipsum probant summis, hic magna</p>
+					<p>Et summis sint e senserit ad quis ubi incididunt ad minim possumus efflorescere,de offendit sempiternum de arbitror multos ipsum probant summis, hic magna</p> 
 				</div>
 			</div>
 		</div>
@@ -222,19 +229,33 @@
 					<li><a href="#">news + events</a></li>	
 					<li><a href="#">about us</a></li>	
 				</ul>
-			<div id="footer2">
-				<p>&#169; 2011 Companey Name. All rights reserved</p>
+				<div id="footer2">
+					<p>&#169; 2011 Companey Name. All rights reserved</p>
+				</div>
 			</div>
 		</div>
-		</div>
-		<div class="popup">
-			<a class="previous"></a>
-			<div class="popup_content">
-				<p>The title for image will go hear</p>
-				<img src="images/photoes/full-photo.png">
-				<a id="close"></a>
+	</div>
+	<div class="popup">
+		<div class="popup_content">
+			<a id="close"></a>
+<!------------------------------------------------------------->
+			<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } '>
+<!------------------------------------------------------------->
+				<div class="carousel-cell">
+					<p>The title for image will go hear</p>
+					<div class="img"></div>
+				</div>
+				<div class="carousel-cell">
+					<p>The title for image will go hear</p>
+					<div class="img"></div>
+				</div>
+				<div class="carousel-cell">
+					<p>The title for image will go hear</p>
+					<div class="img"></div>
+				</div>
+<!------------------------------------------------------------->
 			</div>
-			<a class="next"></a>
+<!------------------------------------------------------------->
 		</div>
 	</div>
 	<script type="text/javascript" src="javascript.js">
