update{ added slider, video & img}

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		</div>
 	</div>
 	<div id="container_2">
-<!------------------------------------------------------------->
+
 		<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } '>	
-<!------------------------------------------------------------->
+
 			<div class="carousel-cell">
 		  		<div id="slider">
 					<img src="images/photoes/banner_slider_01.png">
@@ -44,17 +44,10 @@
 								<img src="images/photoes/arrow.png">
 							</div>
 						</a>
-<!--
-						<div id="slider_menu">
-								<a class="button2"></a>
-								<a class="button2"></a>
-								<a class="button_active"></a>
-						</div>
--->
 					</div>
 				</div>
 		  	</div>
-<!------------------------------------------------------------->
+
 			<div class="carousel-cell">
 		  		<div id="slider">
 					<img src="images/photoes/banner_slider_02.jpg">
@@ -71,17 +64,10 @@
 								<img src="images/photoes/arrow.png">
 							</div>
 						</a>
-<!--
-						<div id="slider_menu">
-								<a class="button2"></a>
-								<a class="button2"></a>
-								<a class="button_active"></a>
-						</div>
--->
 					</div>
 				</div>
 		  	</div>
-<!------------------------------------------------------------->
+
 			<div class="carousel-cell">
 		  		<div id="slider">
 					<img src="images/photoes/banner_slider_01.png">
@@ -98,19 +84,10 @@
 								<img src="images/photoes/arrow.png">
 							</div>
 						</a>
-<!--
-						<div id="slider_menu">
-								<a class="button2"></a>
-								<a class="button2"></a>
-								<a class="button_active"></a>
-						</div>
--->
 					</div>
 				</div>
 		  	</div>	
-<!------------------------------------------------------------->
 		</div>		
-<!------------------------------------------------------------->
 		<div id="intro">
 			<div id="intro1">
 				<h2>the connected lifestyle</h2>
@@ -208,10 +185,10 @@
 			<div class="media1">
 				<h2>media resources-videos</h2>
 				<div class="grid7">
-					<a><img src="images/photoes/video-thumbnail.png"></a>
-					<a><img src="images/photoes/video-thumbnail.png"></a>
-					<a><img src="images/photoes/video-thumbnail.png"></a>
-					<a><img src="images/photoes/video-thumbnail.png"></a>
+					<a id="vid1"><img src="images/photoes/video-thumbnail.png"></a>
+					<a id="vid2"><img src="images/photoes/video-thumbnail.png"></a>
+					<a id="vid3"><img src="images/photoes/video-thumbnail.png"></a>
+					<a id="vid4"><img src="images/photoes/video-thumbnail.png"></a>
 				</div>
 				<div>
 					<p>Et summis sint e senserit ad quis ubi incididunt ad minim possumus efflorescere,de offendit sempiternum de arbitror multos ipsum probant summis, hic magna</p> 
@@ -235,12 +212,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="popup">
+	<div class="popup" id="popup1">
 		<div class="popup_content">
-			<a id="close"></a>
-<!------------------------------------------------------------->
+			<a id="close1"></a>
 			<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } '>
-<!------------------------------------------------------------->
 				<div class="carousel-cell">
 					<p>The title for image will go hear</p>
 					<div class="img"></div>
@@ -253,11 +228,41 @@
 					<p>The title for image will go hear</p>
 					<div class="img"></div>
 				</div>
-<!------------------------------------------------------------->
 			</div>
-<!------------------------------------------------------------->
 		</div>
 	</div>
+	<div class="popup" id="popup2">
+		<div class="popup_content">
+			<a id="close2"></a>
+			<div class="carousel" data-flickity='{ "wrapAround": true, "autoPlay": true } '>
+				<div class="carousel-cell">
+					<p>The title for video will go hear</p>
+					<div class="vid2">
+						<iframe class="pos-iframe" width="971" height="546" src="https://www.youtube.com/embed/LXb3EKWsInQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="carousel-cell">
+					<p>The title for video will go hear</p>
+					<div class="vid2">
+						<iframe class="pos-iframe" width="971" height="546" src="https://www.youtube.com/embed/E5ln4uR4TwQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="carousel-cell">
+					<p>The title for video will go hear</p>
+					<div class="vid2">
+						<iframe class="pos-iframe" width="971" height="546" src="https://www.youtube.com/embed/a3ICNMQW7Ok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="carousel-cell">
+					<p>The title for video will go hear</p>
+					<div class="vid2">
+						<iframe class="pos-iframe" width="971" height="546" src="https://www.youtube.com/embed/L7OLY4HCctQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<script type="text/javascript" src="javascript.js">
 	</script>
 	
